# tyr-tree-compression

./: .gitignore  AGENTS.md  Apptainer  CMakeLists.txt  Config.cmake.in  GOAL.md  LOG.md  README.md  pyproject.toml
.github/workflows/: ci_ctest.yml  ci_ctest_tpp.yml  ci_pytest.yml  ci_release.yml  release.yml  testpypi.yml
cmake/: configure_boost.cmake  configure_pypddl.cmake  configure_yggdrasil.cmake  find_python_native_packages.cmake  patch_python_stubs.cmake  read_project_version.cmake  tyr_native_dependencies.cmake
cmake/install/: fix_macos_runtime_paths.cmake  fix_unix_runtime_paths.cmake
docs/: BUILD.md
exe/: astar_eager.cpp  gbfs_lazy.cpp
experiments/: parser_search.py  suite_test.py  test_parser_search.py
experiments/astar_eager/: 2026-07-11-astar-hash.py  2026-07-11-astar-tree.py  2026-4-3-blind.py
experiments/astar_eager/2026-4-30/: ipc2023-debug.py  ipc2023-release.py  minepddl-debug.py  minepddl-release.py
experiments/gbfs_lazy/: 2026-07-11-gbfs-hash.py  2026-07-11-gbfs-tree.py  2026-1-8-combiner-tyr-pl.py  2026-1-8-gbfs_lazy-1.py  2026-1-8-gbfs_lazy-2.py  2026-1-8-gbfs_lazy-4.py  2026-1-8-gbfs_lazy-8.py  2026-1-8-gbfs_lazy-profiling-classical-1.py  2026-1-8-gbfs_lazy-profiling-classical-2.py  2026-1-8-gbfs_lazy-profiling-classical.py  2026-1-8-gbfs_lazy-profiling-numeric-1.py  2026-1-8-gbfs_lazy-profiling-numeric-2.py  2026-1-8-gbfs_lazy-profiling-numeric.py
include/tyr/: config.hpp  declarations.hpp  tyr.hpp
profiling/: README.md
profiling/planning/: CMakeLists.txt
profiling/planning/lifted/: CMakeLists.txt  successor_generator.cpp  successor_generator.json
profiling/planning/lifted/heuristics/: lmcut.cpp  rpg.json  rpg_add.cpp  rpg_ff.cpp
python/: pytyr_build_backend.py
python/src/: CMakeLists.txt  module.cpp  tyrConfig.cmake
python/src/pytyr/: __init__.py  __init__.pyi  __main__.py  bindings.hpp  module.cpp  module.hpp
python/src/pytyr.egg-info/: SOURCES.txt
python/src/pytyr/common/: module.cpp
python/src/pytyr/formalism/: module.hpp  planning.cpp
python/src/pytyr/formalism/planning/: __init__.py  datas.cpp  domains.cpp  indices.cpp  invariants.cpp  mutable.cpp  views.cpp
python/src/pytyr/planning/: __init__.py  astar_eager.hpp  brfs.hpp  gbfs_lazy.hpp  iw.hpp  module.cpp  planning.hpp  siw.hpp
python/src/pytyr/planning/ground/: __init__.py  module.cpp
python/src/pytyr/planning/ground/astar_eager/: __init__.py
python/src/pytyr/planning/ground/gbfs_lazy/: __init__.py
python/src/pytyr/planning/lifted/: __init__.py  module.cpp
python/src/pytyr/planning/lifted/astar_eager/: __init__.py
python/src/pytyr/planning/lifted/gbfs_lazy/: __init__.py
python/tests/: test_build_backend.py  test_examples.py
python/tests/downstream/minimal_downstream_package/: CMakeLists.txt
python/tests/downstream/minimal_downstream_package/src/downstream_tyr_user/: __init__.py  _downstream_tyr.cpp
src/: CMakeLists.txt
src/analysis/: domains_translation.cpp  listeners.cpp  program_domains.cpp  stratification.cpp  stratification_utils.hpp  task_domains.cpp
src/datalog/: applicability.cpp  assignment_sets.cpp  bottom_up.cpp  consistency_graph.cpp  delta_kpkc.cpp  delta_kpkc_graph.cpp  fact_set.cpp  rule_scheduler.cpp
src/planning/: action_executor.cpp  applicability.cpp  applicability_lifted.cpp  ground_task.cpp  lifted_task.cpp  metric.hpp  plan.cpp  task_utils.cpp
tests/unit/: CMakeLists.txt  main.cpp
tests/unit/buffer/: indexed_hash_set.cpp
tests/unit/common/: adapters.cpp  associative_containers.cpp  bit_packed_array_pool.cpp  bit_packed_array_set.cpp  block_array_set.cpp  canonicalization.cpp  closed_interval.cpp  common.cpp  comparators.cpp  concepts.cpp  containers.cpp  core.cpp  dynamic_bitset.cpp  equal_to.cpp  formatter.cpp  hash.cpp  indexed_hash_set.cpp  json.cpp  json_loader.cpp  json_suite.cpp  path.cpp  project_adapters.cpp  project_path.cpp  raw_array_pool.cpp  raw_array_set.cpp  raw_vector_pool.cpp  raw_vector_set.cpp  repository_types.cpp  segmented_vector.cpp  shared_object_pool.cpp  unique_object_pool.cpp
tests/unit/datalog/: cost_policy.cpp  delta_kpkc.cpp  ground_queue.cpp
tests/unit/formalism/: builder.cpp  index.cpp  repository.cpp  unification.cpp  view.cpp
tests/unit/formalism/planning/: parser_symbol_index_stability.cpp  parser_symbol_index_stability.json
tests/unit/formalism/planning/invariants/: synthesis.cpp  synthesis.json
tests/unit/planning/: ground_task.cpp  ground_task.json  lifted_task.cpp  parser.hpp
tests/unit/planning/algorithms/: brfs_vs_astar.cpp  brfs_vs_astar.json  ground_vs_lifted.cpp  iw.cpp  portable_shuffle.cpp  serialized.cpp  siw.cpp  siw.json  utils.cpp
tests/unit/planning/algorithms/iw/: novelty_table.cpp
tests/unit/planning/algorithms/statistics/: astar.cpp  astar.hpp  astar.json  brfs.cpp  brfs.hpp  brfs.json  fixture_generation.py  gbfs.cpp  gbfs.hpp  gbfs.json  generate_astar.py  generate_brfs.py  generate_gbfs.py  generate_iw.py  generate_siw.py  iw.cpp  iw.hpp  iw.json  search_statistics.hpp  siw.cpp  siw.hpp  siw.json  statistics.hpp
tests/unit/planning/algorithms/statistics/cross/: brfs_vs_astar.cpp
tests/unit/planning/algorithms/statistics/ground/: astar.cpp  astar.json  brfs.cpp  brfs.json  gbfs.cpp  gbfs.json  iw.cpp  iw.json  siw.cpp  siw.json
tests/unit/planning/algorithms/statistics/lifted/: astar.cpp  astar.json  brfs.cpp  brfs.json  gbfs.cpp  gbfs.json  iw.cpp  iw.json  siw.cpp  siw.json
tests/unit/planning/heuristics/: fixture_generation.py  generate_hstar.py  generate_lmcut.py  generate_rpg_add.py  generate_rpg_ff.py  generate_rpg_max.py  ground_rpg.cpp  heuristic.hpp  lmcut.cpp  lmcut.json  rpg_costs.cpp
tests/unit/planning/heuristics/cross/: rpg.cpp
tests/unit/planning/heuristics/ground/: hstar.json  lmcut.cpp  lmcut.json  rpg.cpp  rpg_add.cpp  rpg_add.json  rpg_ff.cpp  rpg_ff.json  rpg_max.cpp  rpg_max.json
tests/unit/planning/heuristics/lifted/: hstar.json  lmcut.cpp  lmcut.json  rpg_add.cpp  rpg_add.json  rpg_ff.cpp  rpg_ff.json  rpg_max.cpp  rpg_max.json
tests/unit/planning/lifted/: state_storage.cpp
(+762 files in other folders)
