[build-system]
requires = [
    "scikit-build-core>=0.10",
    "pyyggdrasil==0.0.5",
    "pypddl==1.0.2",
]
build-backend = "pytyr_build_backend"
backend-path = ["python"]

[project]
name = "pytyr"
version = "0.0.10"
description = "Tyr datalog/planning library"
readme = {text = "", content-type = "text/plain"}
requires-python = ">=3.9"
authors = [
    {name = "Dominik Drexler", email = "dominik.drexler@liu.se"},
]
dependencies = [
    "pyyggdrasil==0.0.5",
    "pypddl==1.0.2",
]

[project.urls]
Homepage = "https://github.com/drexlerd/tyr"

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.scikit-build]
build.targets = ["pytyr_wheel"]
cmake.build-type = "Release"
install.components = ["pytyr"]
wheel.packages = []

[tool.scikit-build.sdist]
include = [
    "CMakeLists.txt",
    "Config.cmake.in",
    "pyproject.toml",
    "python/**",
    "cmake/**",
    "include/**",
    "src/**",
]
exclude = [
    "build*/**",
    "python/src/pytyr.egg-info/**",
    "*.egg-info/**",
    "profiling-results/**",
]

[tool.scikit-build.cmake.define]
BUILD_PYTYR = true
BUILD_TESTS = false
BUILD_EXECUTABLES = false
BUILD_PROFILING = false
TYR_USE_LLD = false
TYR_BUILD_SHARED = true
TYR_LINK_STATIC_DEPENDENCIES = false
TYR_ENABLE_LTO = {env = "TYR_ENABLE_LTO", default = "OFF"}
CMAKE_INSTALL_LIBDIR = "lib"
TYR_HEADER_INSTANTIATION = {env = "TYR_HEADER_INSTANTIATION", default = "OFF"}

[tool.cibuildwheel]
container-engine = "docker"
before-build = "python -m pip install --no-cache-dir pyyggdrasil==0.0.5 pypddl==1.0.2"

[tool.cibuildwheel.linux]
repair-wheel-command = "LD_LIBRARY_PATH=$(python -c 'import os, pypddl, pyyggdrasil; prefixes = [pypddl.native_prefix(), pyyggdrasil.native_prefix()]; print(os.pathsep.join(str(path) for prefix in prefixes for path in sorted(prefix.glob(\"lib*\")) if path.is_dir()))') auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
repair-wheel-command = "DYLD_LIBRARY_PATH=$(python -c 'import os, pypddl, pyyggdrasil; prefixes = [pypddl.native_prefix(), pyyggdrasil.native_prefix()]; print(os.pathsep.join(str(path) for prefix in prefixes for path in sorted(prefix.glob(\"lib*\")) if path.is_dir()))') delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"
