[build-system]
requires = [
    "scikit-build-core>=0.10",
    "pyyggdrasil>=0.0.15,<0.1",
    "pypddl>=1.0.10,<1.1",
]
build-backend = "pytyr_build_backend"
backend-path = ["python"]

[project]
name = "pytyr"
version = "0.0.23"
description = "Tyr datalog/planning library"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.9"
authors = [
    {name = "Dominik Drexler", email = "dominik.drexler@liu.se"},
]
dependencies = [
    "pyyggdrasil>=0.0.15,<0.1",
    "pypddl>=1.0.10,<1.1",
]

[project.urls]
Homepage = "https://github.com/planning-and-learning/tyr"

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.scikit-build]
build.targets = ["pytyr_wheel"]
cmake.build-type = "Release"
install.components = ["pytyr"]
wheel.packages = []

[tool.scikit-build.sdist]
include = [
    "CMakeLists.txt",
    "Config.cmake.in",
    "LICENSE",
    "README.md",
    "pyproject.toml",
    "python/**",
    "cmake/**",
    "include/**",
    "src/**",
]
exclude = [
    "build*/**",
    "python/src/pytyr.egg-info/**",
    "*.egg-info/**",
    "profiling-results/**",
]

[tool.scikit-build.cmake.define]
TYR_BUILD_PYTYR = true
TYR_BUILD_TESTS = false
TYR_BUILD_EXECUTABLES = false
TYR_BUILD_PROFILING = false
TYR_USE_LLD = false
TYR_ENABLE_LTO = {env = "TYR_ENABLE_LTO", default = "OFF"}
CMAKE_INSTALL_LIBDIR = "lib"
TYR_HEADER_INSTANTIATION = {env = "TYR_HEADER_INSTANTIATION", default = "OFF"}

[tool.cibuildwheel]
container-engine = "docker"
before-build = "python -m pip install --no-cache-dir 'pyyggdrasil>=0.0.15,<0.1' 'pypddl>=1.0.10,<1.1'"

[tool.cibuildwheel.linux]
repair-wheel-command = "LD_LIBRARY_PATH=$(python -c 'import os, pypddl, pyyggdrasil; prefixes = [pypddl.native_prefix(), pyyggdrasil.native_prefix()]; print(os.pathsep.join(str(path) for prefix in prefixes for path in sorted(prefix.glob(\"lib*\")) if path.is_dir()))') auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
repair-wheel-command = "delocate-wheel --ignore-missing-dependencies --no-sanitize-rpaths --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"
