[build-system]
requires = [
    "scikit-build-core>=0.10",
    "pyyggdrasil>=0.0.21,<0.1",
    "pypddl>=1.0.21,<1.1",
]
build-backend = "pytyr_build_backend"
backend-path = ["python"]

[project]
name = "pytyr"
version = "0.0.28"
description = "Tyr datalog/planning library"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.9"
authors = [
    {name = "Dominik Drexler", email = "dominik.drexler@liu.se"},
]
dependencies = [
    "pyyggdrasil>=0.0.21,<0.1",
    "pypddl>=1.0.21,<1.1",
]

[project.urls]
Homepage = "https://github.com/planning-and-learning/tyr"

[project.optional-dependencies]
test = [
    "pytest",
    "pypddl-datasets",
]

[tool.scikit-build]
build.targets = ["pytyr_wheel"]
cmake.build-type = "Release"
install.components = ["pytyr"]
wheel.packages = []

[tool.scikit-build.sdist]
include = [
    "CMakeLists.txt",
    "Config.cmake.in",
    "LICENSE",
    "README.md",
    "pyproject.toml",
    "python/**",
    "cmake/**",
    "include/**",
    "src/**",
]
exclude = [
    "build*/**",
    "python/src/pytyr.egg-info/**",
    "*.egg-info/**",
    "profiling-results/**",
]

[tool.scikit-build.cmake.define]
TYR_BUILD_PYTYR = true
TYR_BUILD_TESTS = false
TYR_BUILD_EXECUTABLES = false
TYR_BUILD_PROFILING = false
TYR_USE_LLD = false
TYR_ENABLE_LTO = {env = "TYR_ENABLE_LTO", default = "OFF"}
CMAKE_INSTALL_LIBDIR = "lib"
TYR_HEADER_INSTANTIATION = {env = "TYR_HEADER_INSTANTIATION", default = "OFF"}

[tool.cibuildwheel]
container-engine = "docker"
# Build in the cibuildwheel environment (not a fresh isolated env) so the
# provider install below — which retries to absorb TestPyPI index-propagation
# lag — is the single source of build dependencies. With build isolation the
# build would re-resolve build-system.requires from the index with no retry.
# Because --no-isolation also skips scikit-build-core's dynamic build tools,
# cmake/ninja must be installed here too (manylinux ships cmake but not ninja).
build-frontend = { name = "build", args = ["--no-isolation"] }
before-build = "n=0; until python -m pip install --no-cache-dir 'scikit-build-core>=0.10' 'cmake>=3.15' 'ninja>=1.5' 'pyyggdrasil>=0.0.21,<0.1' 'pypddl>=1.0.21,<1.1'; do n=$((n+1)); [ $n -ge 30 ] && exit 1; echo 'provider wheels not on the index yet; retrying in 60s'; sleep 60; done"

[tool.cibuildwheel.linux]
repair-wheel-command = "python -m pyyggdrasil.repair --providers pypddl,pyyggdrasil --dest-dir {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
repair-wheel-command = "python -m pyyggdrasil.repair --providers pypddl,pyyggdrasil --require-archs {delocate_archs} --dest-dir {dest_dir} {wheel}"
